# houseplants-server-pyramid

./: 0001_initial.py  0002_rename_plants_plant.py  0003_waterplan.py  0004_alter_waterschedule_plant.py  0005_auto_20211017_1625.py  README.md  TODO.md  admin.py  models.py  pyproject.toml  settings.py
houseplants/: db.sqlite3  pytest.ini  schema.py
houseplants/houseplants/: asgi.py  urls.py  wsgi.py
houseplants/houseplants_api/: actions.py  admin.py  apps.py  models.py  resolvers.py  test_actions.py  test_factories.py  test_resolvers.py  tests.py
houseplants/houseplants_api/migrations/: 0001_initial.py  0002_cleaninglog.py
